# twistload

./: CMakeLists.txt  README.md  resources.qrc
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h
src/dialogs/: adddownloaddialog.cpp  adddownloaddialog.h
src/download/: download.cpp  download.h  fragment.cpp  fragment.h
src/fs/: allocationtask.cpp  allocationtask.h  file.cpp  file.h
src/models/: download.cpp  download.h  downloadmodel.cpp  downloadmodel.h
src/ui/: adddownloaddialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
ui/: aboutdialog.ui  adddownloaddialog.ui  mainwindow.ui
